<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/linearLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@android:color/white"
tools:context="com.estrategiamovilmx.sales.weespareenvios.ui.activities.SignatureActivity">


<TextView
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
    android:text="@string/promt_signature"
    android:textColor="@android:color/white"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:gravity="center"/>

<LinearLayout
    android:id="@+id/buttonLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:background="@android:color/white">

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:text="@string/cancel"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/clear"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/getsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/done"
        tools:ignore="ButtonStyle"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

</LinearLayout>

<LinearLayout
    android:id="@+id/canvasLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_all"
    android:orientation="vertical" />

</LinearLayout>