<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:padding="16dp"
        android:text="@string/promt_password_recovery_text"
        />
    <TextView
        android:id="@+id/layout_text_error"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:padding="16dp"
        />

    <LinearLayout
        android:id="@+id/layout_email"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical">
        <EditText
            android:id="@+id/text_email_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pbLoading_update"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_password_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/send_notification"/>
</LinearLayout>