<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true">


        <!-- logo-->
        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin2"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/logo"
                android:src="@mipmap/logo_completo"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_message_splash"
                android:id="@+id/tip2_text"
                android:textColor="@color/negro_semitransparente"
                android:layout_marginTop="8dp"
                android:textStyle="normal"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


        <!-- form-->
        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_logo"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <!--                                            email app:met_maxCharacters="20"-->

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                 />


                <!--                                            password -->

                <EditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_pwd"
                    android:imeActionId="@+id/login"
                    android:inputType="textPassword"
                   />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_show_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/negro_semitransparente"
                    android:text="@string/prompt_show_password"
                    />

            </LinearLayout>


        <LinearLayout
            android:layout_below="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <!--                                       button ingresar -->

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:showDividers="middle"
            android:background="@drawable/gradient"
            android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--                                       button registrar -->
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:weightSum="100"
                android:showDividers="middle"
                android:background="@drawable/border_button_simple"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_signup"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorAccent"
                    android:text="@string/prompt_button_signup"
                    android:textStyle="bold" />
                </LinearLayout>
            <!--                        seccion recuperar contraseña y registrar como empresa-->

            <TextView
                android:id="@+id/link_password"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/prompt_link_password"
                android:autoLink="all"
                android:linksClickable="true"
                android:clickable="true"
                android:padding="16dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        </LinearLayout>



</RelativeLayout>
</ScrollView>
