<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


    <FrameLayout
        android:id="@+id/container_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
                     style="?android:progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center" />

    </FrameLayout>
    <LinearLayout
        android:id="@+id/text_head" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/negro_semitransparente"
            android:text="@string/promt_who"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/negro_semitransparente"
            android:text="@string/promt_who_message"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_list_contact"
        android:layout_below="@+id/text_head"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_contact"
                android:layout_weight="1"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:scrollbarThumbVertical="@drawable/scrolling"
                android:scrollbars="horizontal"
                android:fadeScrollbars="true"
                android:scrollbarSize="4dp"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_actions"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:showDividers="middle"
        android:background="@color/colorSecondary"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_previous_contact"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:textColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/text_button_previous"
            android:layout_height="match_parent"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_next_contact"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/text_button_next"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>