<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:background="@android:color/white"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.estrategiamovilmx.sales.weespareenvios.ui.activities.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/appbar"
          android:padding="@dimen/activity_vertical_margin"
            >

            <EditText
                android:id="@+id/text_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_new"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/text_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_new_confirm"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_show_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/negro_semitransparente"
                android:text="@string/prompt_show_password"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_change"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@android:color/white"
                    android:singleLine="true"

                    android:text="@string/action_change_password"/>
            </LinearLayout>

        </LinearLayout>


        <include layout="@layout/no_connection_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:layout_below="@+id/appbar"/>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
